--- a/FileNameTagger/Shared/Shared.csproj
+++ b/FileNameTagger/Shared/Shared.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MvvmLight" Version="5.4.1.1" />
+  </ItemGroup>
+
 </Project>
