--- a/.github/workflows/deploy-filenametagger.yml
+++ b/.github/workflows/deploy-filenametagger.yml
@@ -17,10 +17,10 @@ jobs:
 
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.x
+          dotnet-version: 6.0.x
 
       - run: dotnet restore ${{ env.PROJECT_PATH }}
 
       - run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
 
-      - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishSingleFile=true --no-build
+      - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64
