add repository base, add CRUD methods for static data, tweak ui, fix scrolling for static data

--- a/FileNameTagger/Repository/Repository.csproj
+++ b/FileNameTagger/Repository/Repository.csproj
@@ -1,17 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <PackageReference Include="SQLite.Net.Async-PCL" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
