--- a/FileNameTagger/FileNameTagger/FileNameTagger.csproj
+++ b/FileNameTagger/FileNameTagger/FileNameTagger.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
+    <PackageReference Include="NReco.VideoInfo.LT" Version="1.1.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
   </ItemGroup>
   
