--- a/FileNameTagger/FileNameTagger/FileNameTagger.csproj
+++ b/FileNameTagger/FileNameTagger/FileNameTagger.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="NReco.VideoInfo.LT" Version="1.1.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="SQLite.Net.Async-PCL" Version="3.1.1" />
+    <PackageReference Include="Microsoft.NETCore.Targets" Version="3.0.0" PrivateAssets="all" />
   </ItemGroup>
   
   <ItemGroup>
