--- a/FileNameTagger/FileNameTagger/FileNameTagger.csproj
+++ b/FileNameTagger/FileNameTagger/FileNameTagger.csproj
@@ -25,15 +25,16 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Compile Update="TagTypeView.xaml.cs">
-      <SubType>Code</SubType>
-    </Compile>
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Page Update="TagTypeView.xaml">
+    <Page Update="TagTypes\EnumTagTypeView.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Update="TagTypes\DateTagTypeView.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="TagTypes\TextTagTypeView.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
   </ItemGroup>
 
