--- a/FileNameTagger/FileNameTagger/FileNameTagger.csproj
+++ b/FileNameTagger/FileNameTagger/FileNameTagger.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NReco.VideoInfo.LT" Version="1.1.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="SQLite.Net.Async-PCL" Version="3.1.1" />
